  * Allow -p to create missing directories recursively (with --makedirs) and add # setting for makedirs.
  * Add fatal_user_errors ngetrc setting to make user errors cause an immediate exit rather than continuing if possible.
  * Add -x option to retrieve based on XPAT searches rather than retrieving all headers and using a cache file. (suggested by Naveen Nathan)
  * Fix segv on || or && in -R with less than 2 items on the stack.
  * Accept invalid dates with 1 digit hours/minutes/seconds or space padded hours.
  * Update cppunit tests to cppunit 1.8.0 style.
  * Add --text option (and corresponding .ngetrc option) to configure how nget handles text posts. (possible values of "files"(default, same as previous versions), "mbox"(store all text posts in one mbox format file, suggested by Steven Mueller), "ignore"(ignore all text posts, suggested by Naveen Nathan))
  * Include info in saved text files about any binaries decoded from that file.
  * Add --save-binary-info option (and corresponding .ngetrc option) to specify wether to save headers/decode info for posts that contain only binaries. (values of no(default, same as previous nget versions), yes).
  * Extend server penalization so that servers can be penalized even if they don't disconnect after returning an error.  Now servers that give overquota errors without disconnecting will be penalized too.

2002-08-04 v0.21:
  * Remove configure check for gcc<=2.7 since it can't really build nget anymore and the test was incorrectly detecting some gcc versions.
  * Add a configure check to remove -fomit-frame-pointer from compile flags on x86, as it breaks exception handling. (reported by Jose Antonio Becerra Permuy)
  * Remember to update the incomplete status when flushing parts of a file and doing a -r without reloading the cache first.
  * Added fullxover=2 setting that handles servers that both add and remove articles out of order.